# panko

./: .dockerignore  .formatter.exs  .gitignore  .mcp.json.example  .rules  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  build.rs  docker-compose.yml  flake.nix  mix.exs
.claude/skills/ash-framework/: SKILL.md
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/agents/agent-replay-m1/: PROMPT.md  prd.json
docs/agents/agent-replay-m2/: PROMPT.md  prd.json
docs/agents/panko-m1/: PROGRESS.md  PROMPT.md  prd.json
docs/agents/panko-m2/: PROGRESS.md  PROMPT.md  prd.json
docs/agents/panko-m3/: PROGRESS.md  PROMPT.md  prd.json
docs/agents/panko-m4/: PROGRESS.md  PROMPT.md  prd.json
docs/agents/panko-m5/: PROGRESS.md  PROMPT.md  prd.json
docs/plans/: 2026-02-05-nix-package-design.md  2026-02-05-nix-package-plan.md  2026-03-09-elixir-ash-rewrite-design.md  2026-03-09-elixir-ash-rewrite-implementation.md  2026-03-11-frontend-overhaul.md
docs/superpowers/plans/: 2026-04-02-ash-authentication.md
docs/superpowers/specs/: 2026-04-02-ash-authentication-design.md
lib/: panko.ex  panko_web.ex
lib/mix/tasks/: panko.gen.mcp.ex
lib/panko/: accounts.ex  application.ex  release.ex  repo.ex  sessions.ex  sharing.ex
lib/panko/accounts/: token.ex  user.ex
lib/panko/sessions/: block.ex  session.ex  session_watcher.ex  source_type.ex  sub_agent.ex  sub_agent_status.ex
lib/panko/sharing/: share.ex
lib/panko_web/: auth_overrides.ex  endpoint.ex  gettext.ex  live_user_auth.ex  router.ex  telemetry.ex
lib/panko_web/components/: blocks.ex  content_renderer.ex  core_components.ex  layouts.ex  share_modal.ex
lib/panko_web/controllers/: auth_controller.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/panko_web/live/: session_live.ex  sessions_live.ex  share_live.ex
lib/panko_web/plugs/: api_key_auth.ex
nix/: devshell.nix  module.nix  package.nix
priv/repo/migrations/: 20260310051849_add_oban_jobs.exs  20260310053828_create_sessions_extensions_1.exs  20260310053829_create_sessions.exs  20260310053942_create_blocks.exs  20260310055421_create_sub_agents.exs  20260310063630_create_shares.exs  20260402235058_add_authentication.exs
src/: config.rs  lib.rs  logging.rs  main.rs
src/assets/: keyboard.js  styles.css
src/daemon/: client.rs  db.rs  mod.rs  protocol.rs  server.rs  share_service.rs
src/export/: context.rs  mod.rs
src/parser/: claude.rs  error.rs  mod.rs  types.rs
src/scanner/: claude.rs  codex.rs  mod.rs  registry.rs
src/server/: assets.rs  mod.rs  routes.rs  templates.rs
src/tui/: actions.rs  app.rs  daemon_bridge.rs  events.rs  mod.rs  sharing.rs  watcher.rs
src/tui/widgets/: confirmation.rs  help.rs  mod.rs  preview.rs  provider_select.rs  session_list.rs  share_modal.rs  shares_panel.rs
src/tunnel/: cloudflare.rs  mock.rs  mod.rs  ngrok.rs  tailscale.rs
templates/: block.html  session.html
test/: test_helper.exs
test/fixtures/: complex_session.jsonl  simple_session.jsonl
test/panko/: release_test.exs
test/panko/accounts/: user_test.exs
test/panko/sessions/: block_test.exs  enums_test.exs  import_test.exs  pubsub_test.exs  session_test.exs  session_watcher_test.exs  sub_agent_test.exs
test/panko/sharing/: share_test.exs
test/support/: conn_case.ex  data_case.ex
tests/: check_command_integration.rs  claude_parser_integration.rs  sharing_e2e.rs  tui_sharing_integration.rs  tui_timeout_tests.rs
tests/fixtures/: sample_claude_session.jsonl  session_with_subagents.jsonl
(+41 files in other folders)
