[package]
name = "panko"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Breadcrumbs for AI coding sessions - view and share Claude Code transcripts"
license = "MIT"
repository = "https://github.com/jordangarrison/panko"
readme = "README.md"
keywords = ["cli", "ai", "agent", "session", "viewer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
minijinja = { version = "2", features = ["loader", "builtins", "json"] }

# Embedded assets
rust-embed = "8"

# Interactive prompts
inquire = "0.7"

# Clipboard
arboard = "3"

# Error handling
thiserror = "1"
anyhow = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config
toml = "0.8"
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Browser opening
webbrowser = "1"

# Markdown rendering
pulldown-cmark = "0.10"

[dev-dependencies]
tempfile = "3"
